<resources>
    <string name="APP_reco_none">אנא התקן את אפליקציית מדא תחילה!</string>
    <string name="APP_reco_off">איתור הודעות כבוי.</string>
    <string name="Acti">הנעת גפיים</string>
    <string name="Apgar">ציון אפגאר הוא: %d</string>
    <string name="ApgarInfo">יילוד בציון נמוך מ4 זקוק להחייאה מיידית.\nניקוד בין 4 ל6 מסמן על יילוד במצוקה בינונית הזקוק לחמצון והמרצה.\nניקוד גבוה מ6 הינו אינדיקציה ליילוד תקין.</string>
    <string name="Appe">הופעה/צבע</string>
    <string name="BGServiceTicker">מזהה הודעות חדשות ממד\"א</string>
    <string name="BGServiceTtl">מאזין ברקע להודעות</string>
    <string name="BGServiceTxt">מזהה הודעות חדשות שנשלחות ממוקד מד\"א ברקע</string>
    <string name="CONANTest">אירוע חדש. 14:18 מונה:267 כתובת: בדיקה!!! ירושלים המ\"ג 7, קוד הזנקה: מחלה מבוגר, קוד רפואי: דום לב</string>
    <string name="UHTest">איחוד הצלה: קריאת חירום כוננים. כתובת: בדיקה!!! ירושלים ירמיהו 78, קוד הזנקה: מחלה מבוגר, קוד רפואי: קוצר נשימה</string>
    <string name="CONAN_reco_off">איתור הודעות כונן כבוי בהגדרות.</string>
    <string name="ContracBetween">הפרש מציר קודם: %s</string>
    <string name="ContracDelete">מחק צירים שמורים?</string>
    <string name="ContracDeleteEmpty">אין צירים למחוק</string>
    <string name="ContracLength">אורך הציר: %s</string>
    <string name="ContracMinutes">%1$d דקות ו%2$d שניות</string>
    <string name="ContracRecover">שחזר נתונים קודמים?</string>
    <string name="ContracSecondes">%d שניות</string>
    <string name="Fna">שם פרטי</string>
    <string name="Glasgow">ציון גלאזגו הוא: %s</string>
    <string name="GlasgowHigh">תרדמת חמורה</string>
    <string name="GlasgowInfo">ציון נמוך מ9 מוגדר כתרדמת חמורה.\nציון בין 9 ל12 מוגדר כתרדמת בינונית.\nציון גבוה מ12 מוגדר כתרדמת מינורית.</string>
    <string name="GlasgowLow">תרדמת מינורית</string>
    <string name="GlasgowMed">תרדמת בינונית</string>
    <string name="Grim">העוויות</string>
    <string name="HN">חולה נפגע</string>
    <string name="HT">התחייבות</string>
    <string name="Lna">שם משפחה</string>
    <string name="MISHM_reco_off">איתור הודעות משמרת כבוי בהגדרות.</string>
    <string name="Mcode">קודים רפואיים</string>
    <string name="MetroBound">המטרונום פעיל מתוך כלי עזר, לא ניתן לעצור אותו חיצונית.</string>
    <string name="MetroServiceTtl">מטרונום פעיל ברקע</string>
    <string name="MetroServiceTxt">התראה זו מונעת כיבוי המטרונום באופן אוטומטי במטרת חיסכון בסוללה.</string>
    <string name="MetroStop">עצור</string>
    <string name="Mhac">עבור להכתבה</string>
    <string name="Minf">פרטי מקרה</string>
    <string name="Mrec">אשר קבלה</string>
    <string name="Mrec2">חזור</string>
    <string name="NoPicked">יש לסמן לכל הפחות כלי עזר אחד!</string>
    <string name="Nteam">הוספת איש צוות</string>
    <string name="Puls">דופק</string>
    <string name="Resp">נשימה</string>
    <string name="SUM">סכום</string>
    <string name="SendNoNames">לא ניתן לשלוח ללא אנשי צוות!</string>
    <string name="TEAMTest">הודעת צוות. 02:34 מונה:1325 כתובת: בדיקה!!! ירושלים בורוכוב. קוד הזנקה: מחלה מבוגר, קוד רפואי: חוסר הכרה</string>
    <string name="TestCallApp">כונן</string>
    <string name="TestCallMsg">דימוי קבלת מקרה כהודעת כונן או כהודעת משמרת?</string>
    <string name="TestCallSMS">משמרת</string>
    <string name="TversionNumber">גרסה %1$s</string>
    <string name="aQ">מתנדב 1</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">הגדרות</string>
    <string name="add_word">הוסף מונח למילון</string>
    <string name="address">כתובת אירוע</string>
    <string name="admin">מנהל:</string>
    <string name="ambN">מספר אמבולנס</string>
    <string name="app_name">דיווחי מערך הכוננים</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">החל</string>
    <string name="atm">לחץ אטמוספרי בבלון</string>
    <string name="atm_100">100</string>
    <string name="bQ">מתנדב 2</string>
    <string name="back">חזרה לעמוד הבית</string>
    <string name="banner_ad_unit_id">ca-app-pub-7600269766434003/5732229370</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="breathing">נשימות בדקה</string>
    <string name="button_a">הכתבת טפסים</string>
    <string name="button_ag">מחשבון אפגאר</string>
    <string name="button_b">דיווח צוות</string>
    <string name="button_c">שעון דופק</string>
    <string name="button_d">מטרונום</string>
    <string name="button_dict">מילון רפואי</string>
    <string name="button_e">מחשבון מדדים</string>
    <string name="button_f">שעון צירים</string>
    <string name="button_g">מחשבון חמצן</string>
    <string name="button_gl">מחשבון גלאזגו</string>
    <string name="button_h">כלי עזר</string>
    <string name="button_i">הודעה כללית</string>
    <string name="button_j">דיווחים למוקד</string>
    <string name="button_p">פרוטוקלים</string>
    <string name="cQ">מתנדב 3</string>
    <string name="callT">כל האירועים (ברירת מחדל)</string>
    <string name="callT1">איחוד הצלה</string>
    <string name="callT2">מערך הכוננים (מד״א)</string>
    <string name="callT3">אירועי משמרת</string>
    <string name="callT4">הודעות מנהלתיות ושירות</string>
    <string name="callTS">הודעות שירות</string>
    <string name="card_content_descriptor">card</string>
    <string name="changeName">לחץ כאן לשינוי שם התצוגה שלך</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chatNameNum">רשמת רק מספרים!</string>
    <string name="code">קוד רפואי</string>
    <string name="codeBad">קוד הפעלה\nשגוי או לא קיים. נסה שנית!</string>
    <string name="codeGood">קוד הפעלה נקלט בהצלחה!\nהאפליקציה תופעל כעת!</string>
    <string name="codeNotAllowed">קוד לא אושר לשימוש!\nייתכן ואירעה תקלה. נסה להזין קוד ידנית: %s</string>
    <string name="codeNotExist">נראה כי מעולם לא שלחת לנו בקשת קוד.\nבמידה ושלחת כבר פעם, אנא נסה לשלוח בקשת קוד שוב, ופרט על התקלה.</string>
    <string name="codeNote">כתוב את פרטיך והוסף בהערות את פרטי ההתנדבות שלך (מרחב ותפקיד) ואנו נבחן את הפרטים ונשלח קוד הפעלה בהקדם.</string>
    <string name="codeUsed">הקוד כבר נוצל בעבר.\nלא ניתן להשתמש בקוד יותר מפעם אחת!\nייתכן והייתה תקלה. נסו להזין ידנית את הקוד: %s</string>
    <string name="res_0x7f11007d_com_crashlytics_android_build_id">5c86563a-8ae3-42a0-a921-c735ae77189e</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="pickC">לחץ לבחירת קוד</string>
    <string name="succ">שלח</string>
    <string name="visa">מספר ויזה</string>
    <string name="guide_hero_title">מרכז הדרכה ומידע לכונן</string>
    <string name="guide_hero_subtitle">כל מה שצריך לדעת להפעלת היישומון, הגדרת הרשאות, וקבלת קריאות בזמן אמת</string>
    <string name="guide_ch1_title">1. התקנה והרשאות חיוניות (Samsung / Xiaomi / Pixel)</string>
    <string name="guide_ch1_content">כדי שהאפליקציה תוכל להקפיץ חלון קריאה בזמן אמת גם כשהמכשיר נעול או כבוי, נדרשות 3 הרשאות ליבה:\n\n• גישה להתראות (Notification Access): מאפשרת לאפליקציה לזהות קריאות מוקד שנשלחות מאפליקציות מד\"א ואיחוד הצלה.\n• הצגה מעל אפליקציות אחרות (Overlay): הכרחי להקפצת חלון החירום מיד עם קבלת קריאה מעל כל מסך קיים.\n• הרשאת מיקום (GPS): מאפשרת לחשב מרחק וצפי זמן הגעה מדויקים מהמיקום שלכם לכתובת האירוע.\n\nטיפ חשוב למכשירי סמסונג ושיאומי:\nמומלץ להיכנס להגדרות הסוללה של המכשיר ולהגדיר את האפליקציה כ\"ללא הגבלת סוללה\" (Unrestricted) כדי שמערכת ההפעלה לא תרדים את שירות ההאזנה ברקע.</string>
    <string name="guide_ch2_title">2. קבלת קריאות חירום ופענוח נתונים</string>
    <string name="guide_ch2_content">עם קבלת אירוע חדש:\n• האפליקציה תפעיל צלצול התראה ותקפיץ חלון חירום מעוצב.\n• קריאות איחוד הצלה מסומנות בכתום, וקריאות מד\"א מסומנות באדום.\n• בראש החלון מוצגים עיר ושם הרחוב לצד המרחק המדויק וזמן ההגעה המשוער.\n• בלחיצה על \'אשר קבלה\' או \'פתח יישומון\' האפליקציה תפתח ישירות את יישומון המוקד המתאים.</string>
    <string name="guide_ch3_title">3. התאמת צלילים, שעות לילה ומצב שבת</string>
    <string name="guide_ch3_content">בהגדרות האפליקציה תוכלו:\n• לבחור צליל התראה מותאם אישית בנפרד למד\"א, איחוד הצלה, והודעות מנהלתיות.\n• להגדיר מספר מחזורי צלצול (1, 2, 3 או רציף ללא הגבלה).\n• להגדיר שעות לילה שבהן האפליקציה תרטוט בלבד או תשמיע צליל מוחלש.\n• להפעיל \'מצב שבת\' לסגירה אוטומטית של חלון הקריאה לאחר מספר שניות ללא צורך במגע יד.</string>
    <string name="guide_ch4_title">4. מחשבונים וכלים רפואיים</string>
    <string name="guide_ch4_content">בלשונית כלי העזר תמצאו מגוון מחשבונים חיוניים:\n• מחשבון מדדים: בדיקת טווחי דופק, לחץ דם ונשימות תקינים לפי גיל.\n• מחשבון אפגאר (APGAR): להערכת מצב יילוד.\n• סרגל גלאזגו (GCS): להערכת רמת הכרה במבוגר וילד.\n• מחשבון חמצן: חישוב דקות חמצן שנותרו בבלון לפי לחץ וזרימת LPM.\n• שעון צירים: למעקב אחר משך ותדירות צירי לידה.\n• מטרונום החייאה: קצב מדויק של 110 פעימות לדקה להחייאה איכותית.\n• מילון רפואי ופרוטוקולים לעיון מהיר.</string>
    <string name="guide_ch5_title">5. שאלות נפוצות ופתרון תקלות (FAQ)</string>
    <string name="guide_ch5_content">ש: החלון לא קופץ לי כשיש קריאה?\nת: ודאו שמתג \'האזנה ברקע\' במסך הבית דולק (ירוק), ושאישרתם את הרשאת \'הצגה מעל אפליקציות\' וגישה להתראות בהגדרות המכשיר.\n\nש: הצליל לא נשמע כשהטלפון על שקט?\nת: בהגדרות צליל ורטט ודאו שהאפשרות \'התראה לפי סטטוס מכשיר\' כבויה, כדי שההתראה תצפצף גם במצב שקט/רטט.\n\nש: כיצד להחליף שפה?\nת: בהגדרות > בחירת שפה, ניתן לעבור בכל עת בין עברית, אנגלית וערבית.</string>
</resources>