<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main3"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rap"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/tofes_card_view"
        android:layoutDirection="ltr"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/M1ambulanceNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <atlow.chemi.mymada.helpers.FixedTextInputEditText
                        android:gravity="start"
                        android:id="@+id/M1txt1E"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ambN"
                        android:singleLine="true"
                        android:maxLength="4"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/M1visaNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/M1ambulanceNumber">
                    <atlow.chemi.mymada.helpers.FixedTextInputEditText
                        android:gravity="start"
                        android:id="@+id/M1visaT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/visa"
                        android:singleLine="true"
                        android:maxLength="4"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/M1address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/M1visaNumber">
                    <atlow.chemi.mymada.helpers.FixedTextInputEditText
                        android:gravity="start"
                        android:id="@+id/M1addressT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:singleLine="true"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/M1HoleNifga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/M1address">
                    <atlow.chemi.mymada.helpers.FixedTextInputEditText
                        android:gravity="start"
                        android:id="@+id/M1txt2E"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/HN"
                        android:singleLine="true"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/M1Hitchayvut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/M1HoleNifga">
                    <atlow.chemi.mymada.helpers.FixedTextInputEditText
                        android:gravity="start"
                        android:id="@+id/M1txt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/HT"
                        android:singleLine="true"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/M1Schum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/M1Hitchayvut">
                    <atlow.chemi.mymada.helpers.FixedTextInputEditText
                        android:gravity="start"
                        android:id="@+id/M1txt6E"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/SUM"
                        android:singleLine="true"
                        android:maxLength="4"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/M1firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/M1Schum">
                    <atlow.chemi.mymada.helpers.FixedTextInputEditText
                        android:gravity="start"
                        android:id="@+id/M1txt4E"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Fna"
                        android:singleLine="true"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/M1familyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/M1firstName">
                    <atlow.chemi.mymada.helpers.FixedTextInputEditText
                        android:gravity="start"
                        android:id="@+id/M1txt5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Lna"
                        android:singleLine="true"
                        android:inputType="text"
                        android:imeOptions="actionNext"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/M1MedicalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/M1familyName">
                    <atlow.chemi.mymada.helpers.FixedTextInputEditText
                        android:gravity="start"
                        android:id="@+id/M1button2"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pickC"
                        android:singleLine="true"
                        android:inputType="number"
                        android:imeOptions="actionNext"/>
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:id="@+id/tofes_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:cardBackgroundColor="@color/ColorNice"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">
        <Button
            android:textSize="20sp"
            android:textColor="#fff"
            android:gravity="center"
            android:id="@+id/M1btnN"
            android:background="@drawable/btns_new"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:text="@string/succ"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"/>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
